--- a/AngularApp/projects/app-service-diagnostics/src/armResourceConfig/microsoft.signalrservice/signalr/config.json
+++ b/AngularApp/projects/app-service-diagnostics/src/armResourceConfig/microsoft.signalrservice/signalr/config.json
@@ -10,7 +10,10 @@
     "azureServiceName": "Azure SignalR Services",
     "armApiVersion": "2020-05-01",
     "isSearchEnabled": true,
-    "isApplicableForLiveChat": false,
+    "liveChatConfig": {
+        "isApplicableForLiveChat": false,
+        "supportTopicIds": []
+    },
     "categories": [
         {
             "id": "OverallCheck",
