Extend keystoneDetectorId in armConfig for partners.

--- a/AngularApp/projects/app-service-diagnostics/src/armResourceConfig/microsoft.apimanagement/service/config.json
+++ b/AngularApp/projects/app-service-diagnostics/src/armResourceConfig/microsoft.apimanagement/service/config.json
@@ -9,6 +9,7 @@
 	"azureServiceName": "Azure API Management Service",
 	"armApiVersion": "2018-06-01-preview",
 	"isSearchEnabled": true,
+	"keystoneDetectorId": "",
 	"liveChatConfig": {
 		"isApplicableForLiveChat": false,
 		"supportTopicIds": []
