--- a/AngularApp/projects/app-service-diagnostics/src/armResourceConfig/microsoft.servicefabric/clusters/config.json
+++ b/AngularApp/projects/app-service-diagnostics/src/armResourceConfig/microsoft.servicefabric/clusters/config.json
@@ -9,6 +9,7 @@
 	"azureServiceName": "Service Fabric",
 	"armApiVersion": "2020-03-01",
 	"isSearchEnabled": true,
+	"keystoneDetectorId": "",
 	"liveChatConfig": {
         "isApplicableForLiveChat": false,
         "supportTopicIds": []
