--- a/AngularApp/projects/app-service-diagnostics/src/armResourceConfig/microsoft.certificateregistration/certificateorders/config.json
+++ b/AngularApp/projects/app-service-diagnostics/src/armResourceConfig/microsoft.certificateregistration/certificateorders/config.json
@@ -9,6 +9,7 @@
 	"azureServiceName": "App Service Certificates",
 	"armApiVersion": "2020-06-01",
 	"isSearchEnabled": true,
+	"keystoneDetectorId": "",
 	"liveChatConfig": {
 		"isApplicableForLiveChat": false,
 		"supportTopicIds": []
