--- a/AngularApp/projects/app-service-diagnostics/src/armResourceConfig/microsoft.containerinstance/containergroups/config.json
+++ b/AngularApp/projects/app-service-diagnostics/src/armResourceConfig/microsoft.containerinstance/containergroups/config.json
@@ -9,6 +9,7 @@
 	"azureServiceName": "Azure Container Instances",
 	"armApiVersion": "2019-12-01",
 	"isSearchEnabled": true,
+	"keystoneDetectorId": "",
 	"liveChatConfig": {
 		"isApplicableForLiveChat": false,
 		"supportTopicIds": []
