--- a/AngularApp/projects/app-service-diagnostics/src/armResourceConfig/microsoft.containerregistry/registries/config.json
+++ b/AngularApp/projects/app-service-diagnostics/src/armResourceConfig/microsoft.containerregistry/registries/config.json
@@ -9,6 +9,7 @@
 	"azureServiceName": "Azure Container Registry",
 	"armApiVersion": "2019-12-01-preview",
 	"isSearchEnabled": true,
+	"keystoneDetectorId": "",
 	"liveChatConfig": {
 		"isApplicableForLiveChat": false,
 		"supportTopicIds": []
