--- a/AngularApp/projects/app-service-diagnostics/src/armResourceConfig/microsoft.logic/integrationServiceEnvironments/config.json
+++ b/AngularApp/projects/app-service-diagnostics/src/armResourceConfig/microsoft.logic/integrationServiceEnvironments/config.json
@@ -9,6 +9,7 @@
 	"azureServiceName": "Integration Service Environments",
 	"armApiVersion": "2016-06-01",
 	"isSearchEnabled": true,
+	"keystoneDetectorId": "",
 	"liveChatConfig": {
 		"isApplicableForLiveChat": false,
 		"supportTopicIds": []
