--- a/AngularApp/projects/app-service-diagnostics/src/armResourceConfig/microsoft.appplatform/spring/config.json
+++ b/AngularApp/projects/app-service-diagnostics/src/armResourceConfig/microsoft.appplatform/spring/config.json
@@ -7,7 +7,9 @@
 	"matchRegEx": "/Microsoft.AppPlatform/Spring/",
 	"searchSuffix": "Spring",
 	"azureServiceName": "Azure Spring Cloud",
-	"armApiVersion": "2019-05-01-preview",
+	"armApiConfig": {
+		"armApiVersion": "2019-05-01-preview"
+	},
 	"isSearchEnabled": true,
 	"keystoneDetectorId": "",
 	"liveChatConfig": {
