--- a/AngularApp/projects/app-service-diagnostics/src/armResourceConfig/microsoft.signalrservice/signalr/config.json
+++ b/AngularApp/projects/app-service-diagnostics/src/armResourceConfig/microsoft.signalrservice/signalr/config.json
@@ -8,7 +8,9 @@
     "matchRegEx": "/Microsoft.SignalRService/SignalR/",
     "searchSuffix": "signalr",
     "azureServiceName": "Azure SignalR Services",
-    "armApiVersion": "2020-05-01",
+    "armApiConfig": {
+		"armApiVersion": "2020-05-01"
+	},
     "isSearchEnabled": true,
 	"keystoneDetectorId": "",
     "liveChatConfig": {
