Extend partner config to indicate whether the response returned by arm api is base64 encoded. (#1013)
* Extend keystoneDetectorId in armConfig for partners.

* Fix typo in variable name.

* Extend partner config to indicate whether the response returned by arm api is base64 encoded.

* Fix partner configs to reflect updated config schema.

* Optimizing if condition

--- a/AngularApp/projects/app-service-diagnostics/src/armResourceConfig/microsoft.containerregistry/registries/config.json
+++ b/AngularApp/projects/app-service-diagnostics/src/armResourceConfig/microsoft.containerregistry/registries/config.json
@@ -7,8 +7,11 @@
 	"matchRegEx": "/Microsoft.ContainerRegistry/registries/",
 	"searchSuffix": "ACR",
 	"azureServiceName": "Azure Container Registry",
-	"armApiVersion": "2019-12-01-preview",
+	"armApiConfig": {
+		"armApiVersion": "2019-12-01-preview"
+	},
 	"isSearchEnabled": true,
+	"keystoneDetectorId": "",
 	"liveChatConfig": {
 		"isApplicableForLiveChat": false,
 		"supportTopicIds": []
