--- a/AngularApp/projects/app-service-diagnostics/src/armResourceConfig/microsoft.apimanagement/service/config.json
+++ b/AngularApp/projects/app-service-diagnostics/src/armResourceConfig/microsoft.apimanagement/service/config.json
@@ -7,8 +7,11 @@
 	"matchRegEx": "/Microsoft.ApiManagement/service/",
 	"searchSuffix": "AZURE API MANAGEMENT SERVICE",
 	"azureServiceName": "Azure API Management Service",
-	"armApiVersion": "2018-06-01-preview",
+	"armApiConfig": {
+		"armApiVersion": "2018-06-01-preview"
+	},
 	"isSearchEnabled": true,
+	"keystoneDetectorId": "",
 	"liveChatConfig": {
 		"isApplicableForLiveChat": false,
 		"supportTopicIds": []
