--- a/AngularApp/projects/app-service-diagnostics/src/armResourceConfig/microsoft.certificateregistration/certificateorders/config.json
+++ b/AngularApp/projects/app-service-diagnostics/src/armResourceConfig/microsoft.certificateregistration/certificateorders/config.json
@@ -7,8 +7,11 @@
 	"matchRegEx": "/Microsoft.CertificateRegistration/certificateOrders/",
 	"searchSuffix": "certs",
 	"azureServiceName": "App Service Certificates",
-	"armApiVersion": "2020-06-01",
+	"armApiConfig": {
+		"armApiVersion": "2020-06-01"
+	},
 	"isSearchEnabled": true,
+	"keystoneDetectorId": "",
 	"liveChatConfig": {
 		"isApplicableForLiveChat": false,
 		"supportTopicIds": []
