--- a/AngularApp/projects/app-service-diagnostics/src/armResourceConfig/microsoft.containerservice/managedclusters/config.json
+++ b/AngularApp/projects/app-service-diagnostics/src/armResourceConfig/microsoft.containerservice/managedclusters/config.json
@@ -7,8 +7,11 @@
 	"matchRegEx": "/Microsoft.ContainerService/managedClusters/",
 	"searchSuffix": "AKS",
 	"azureServiceName": "Azure Kubernetes Service",
-	"armApiVersion": "2019-04-01",
+	"armApiConfig": {
+		"armApiVersion": "2019-04-01"
+	},
 	"isSearchEnabled": true,
+	"keystoneDetectorId": "",
 	"liveChatConfig": {
 		"isApplicableForLiveChat": false,
 		"supportTopicIds": []
