--- a/AngularApp/projects/app-service-diagnostics/src/armResourceConfig/microsoft.apimanagement/service/config.json
+++ b/AngularApp/projects/app-service-diagnostics/src/armResourceConfig/microsoft.apimanagement/service/config.json
@@ -17,14 +17,42 @@
 		"supportTopicIds": []
 	},
 	"categories": [{
-			"id": "Service Availability",
-			"name": "Service Availability",
-			"description": "Investigate issues with the API Management gateway requests, gateway policy errors and service uptime. Find out the common causes and investigate in detail.",
-			"keywords": ["Gateway requests", "Service Up"],
+			"id": "PerformanceandAvailabilityAPIM",
+			"name": "Performance and Availability",
+			"description": "Check your API service's health and discover performance issues",
+			"keywords": ["Service down", "Platform Health", "Backend 5xx", "SNAT"],
 			"color": "rgb(186, 211, 245)",
 			"createFlowForCategory": true,
 			"chatEnabled": false
-		}
-	],
-	"pesId": "15551"
+		},
+                   {
+			"id": "ProxyandPoliciesAPIM",
+			"name": "Proxy and Policies",
+			"description": "Found out if your API proxy and policy are misconfigured",
+			"keywords": ["Caching", "Policy expressions", "Validate JWT", "CORS"],
+			"color": "rgb(186, 211, 245)",
+			"createFlowForCategory": true,
+			"chatEnabled": false
+},{
+			"id": "GatewayPerformanceAPIM",
+			"name": "Gateway Performance",
+			"description": "Analyze your API Gateway performance and discover issues",
+			"keywords": ["Gateway responses", "4xx", "5xx", "Gateway request"],
+			"color": "rgb(186, 211, 245)",
+			"createFlowForCategory": true,
+			"chatEnabled": false
+},{
+			"id": "ServiceUpgradeAPIM",
+			"name": "Service Upgrade",
+			"description": "Check your service SKU and discover your service upgrade events",
+			"keywords": ["Service upgrade", "Service SKU", "Latency", "Resource deployment failure"],
+			"color": "rgb(186, 211, 245)",
+			"createFlowForCategory": true,
+			"chatEnabled": false
+}],
+
+
+	"quickLinks": ["apim-platform-health", "apim-proxy-policy-errors", "apim-proxy-performance"],
+
+   	"pesId": "15551"
 }
