--- a/AngularApp/projects/app-service-diagnostics/src/armResourceConfig/microsoft.apimanagement/service/config.json
+++ b/AngularApp/projects/app-service-diagnostics/src/armResourceConfig/microsoft.apimanagement/service/config.json
@@ -1,58 +1,83 @@
 {
-	"homePageText": {
-		"title": "Azure API Management Service Diagnostics",
-		"description": "Use Azure API Management Service Diagnostics to investigate how your service is performing, diagnose issues, and discover how to improve its reliability. Select the problem category that best matches the information or tool that you're interested in:",
-		"searchBarPlaceHolder": "Search Azure API Management Services"
-	},
-	"matchRegEx": "/Microsoft.ApiManagement/service/",
-	"searchSuffix": "AZURE API MANAGEMENT SERVICE",
-	"azureServiceName": "Azure API Management Service",
-	"armApiConfig": {
-		"armApiVersion": "2018-06-01-preview"
-	},
-	"isSearchEnabled": true,
-	"keystoneDetectorId": "",
-	"liveChatConfig": {
-		"isApplicableForLiveChat": false,
-		"supportTopicIds": []
-	},
-	"categories": [{
-			"id": "PerformanceandAvailabilityAPIM",
-			"name": "Performance and Availability",
-			"description": "Check your API service's health and discover performance issues",
-			"keywords": ["Service down", "Platform Health", "Backend 5xx", "SNAT"],
-			"color": "rgb(186, 211, 245)",
-			"createFlowForCategory": true,
-			"chatEnabled": false
-		},
-                   {
-			"id": "ProxyandPoliciesAPIM",
-			"name": "Proxy and Policies",
-			"description": "Found out if your API proxy and policy are misconfigured",
-			"keywords": ["Caching", "Policy expressions", "Validate JWT", "CORS"],
-			"color": "rgb(186, 211, 245)",
-			"createFlowForCategory": true,
-			"chatEnabled": false
-},{
-			"id": "GatewayPerformanceAPIM",
-			"name": "Gateway Performance",
-			"description": "Analyze your API Gateway performance and discover issues",
-			"keywords": ["Gateway responses", "4xx", "5xx", "Gateway request"],
-			"color": "rgb(186, 211, 245)",
-			"createFlowForCategory": true,
-			"chatEnabled": false
-},{
-			"id": "ServiceUpgradeAPIM",
-			"name": "Service Upgrade",
-			"description": "Check your service SKU and discover your service upgrade events",
-			"keywords": ["Service upgrade", "Service SKU", "Latency", "Resource deployment failure"],
-			"color": "rgb(186, 211, 245)",
-			"createFlowForCategory": true,
-			"chatEnabled": false
-}],
-
-
-	"quickLinks": ["apim-platform-health", "apim-proxy-policy-errors", "apim-proxy-performance"],
-
-   	"pesId": "15551"
+  "homePageText": {
+    "title": "Azure API Management Service Diagnostics",
+    "description": "Use Azure API Management Service Diagnostics to investigate how your service is performing, diagnose issues, and discover how to improve its reliability. Select the problem category that best matches the information or tool that you're interested in:",
+    "searchBarPlaceHolder": "Search Azure API Management Services"
+  },
+  "matchRegEx": "/Microsoft.ApiManagement/service/",
+  "searchSuffix": "AZURE API MANAGEMENT SERVICE",
+  "azureServiceName": "Azure API Management Service",
+  "armApiConfig": {
+    "armApiVersion": "2018-06-01-preview"
+  },
+  "isSearchEnabled": true,
+  "keystoneDetectorId": "",
+  "liveChatConfig": {
+    "isApplicableForLiveChat": false,
+    "supportTopicIds": []
+  },
+  "categories": [
+    {
+      "id": "PerformanceandAvailabilityAPIM",
+      "name": "Performance and Availability",
+      "description": "Check your API service's health and discover performance issues",
+      "keywords": [
+        "Service down",
+        "Platform Health",
+        "Backend 5xx",
+        "SNAT"
+      ],
+      "color": "rgb(186, 211, 245)",
+      "createFlowForCategory": true,
+      "chatEnabled": false
+    },
+    {
+      "id": "ProxyandPoliciesAPIM",
+      "name": "Proxy and Policies",
+      "description": "Found out if your API proxy and policy are misconfigured",
+      "keywords": [
+        "Caching",
+        "Policy expressions",
+        "Validate JWT",
+        "CORS"
+      ],
+      "color": "rgb(186, 211, 245)",
+      "createFlowForCategory": true,
+      "chatEnabled": false
+    },
+    {
+      "id": "GatewayPerformanceAPIM",
+      "name": "Gateway Performance",
+      "description": "Analyze your API Gateway performance and discover issues",
+      "keywords": [
+        "Gateway responses",
+        "4xx",
+        "5xx",
+        "Gateway request"
+      ],
+      "color": "rgb(186, 211, 245)",
+      "createFlowForCategory": true,
+      "chatEnabled": false
+    },
+    {
+      "id": "ServiceUpgradeAPIM",
+      "name": "Service Upgrade",
+      "description": "Check your service SKU and discover your service upgrade events",
+      "keywords": [
+        "Service upgrade",
+        "Service SKU",
+        "Latency",
+        "Resource deployment failure"
+      ],
+      "color": "rgb(186, 211, 245)",
+      "createFlowForCategory": true,
+      "chatEnabled": false
+    }
+  ],
+  "quickLinks": [
+    "apim-platform-health",
+    "apim-proxy-policy-errors",
+    "apim-proxy-performance"
+  ],
+  "pesId": "15551"
 }
