updated proxy and policies category name based on APIM team naming convention in config file

--- a/AngularApp/projects/app-service-diagnostics/src/armResourceConfig/microsoft.apimanagement/service/config.json
+++ b/AngularApp/projects/app-service-diagnostics/src/armResourceConfig/microsoft.apimanagement/service/config.json
@@ -26,7 +26,7 @@
 
 	    "categories": [{
 			"id": "ProxyandPoliciesAPIM",
-			"name": "Proxy and Policies",
+			"name": "API Policies",
 			"description": "Found out if your API proxy and policy are misconfigured",
 			"keywords": ["Caching", "Policy expressions", "Validate JWT", "CORS"],
 			"color": "rgb(186, 211, 245)",
