Applens Incident Assistance (#1035)
* Basic structure in backend and frontend

* some changes

* ICM Assist applens

* Some styling changes

* Final styling

* Default mode

* Logging and loader

* Final touches

* that comma

Co-authored-by: Ajay Sharma <ajsharm@microsoft.com>

--- a/ApplensBackend/appsettings.json
+++ b/ApplensBackend/appsettings.json
@@ -68,6 +68,11 @@
     "ClientId": "",
     "AppKey": ""
   },
+  "IncidentAssistance": {
+    "IsEnabled": false,
+    "IncidentAssistEndpoint": "",
+    "ApiKey": ""
+  },
   "SelfHelpContent": {
     "UserName": "",
     "RepoName": "",
