--- a/AngularApp/projects/app-service-diagnostics/src/armResourceConfig/microsoft.apimanagement/service/config.json
+++ b/AngularApp/projects/app-service-diagnostics/src/armResourceConfig/microsoft.apimanagement/service/config.json
@@ -30,6 +30,7 @@
       "color": "rgb(208, 175, 239)",
       "createFlowForCategory": true,
       "chatEnabled": false
+      "overviewDetectorId": "apim-availability-and-performance"
     },
     {
       "id": "API Policies",
@@ -44,6 +45,7 @@
       "color": "rgb(249, 213, 180)",
       "createFlowForCategory": true,
       "chatEnabled": false
+      "overviewDetectorId": "Apim-proxy-policy-errors-recategory"
     },
     {
       "id": "Gateway Performance",
@@ -58,6 +60,7 @@
       "color": "rgb(208, 228, 176)",
       "createFlowForCategory": true,
       "chatEnabled": false
+      "overviewDetectorId": "apim-proxy-response-recategory"
     },
     {
       "id": "Service Upgrade",
@@ -72,6 +75,7 @@
       "color": "rgb(186, 211, 245)",
       "createFlowForCategory": true,
       "chatEnabled": false
+      "overviewDetectorId": "apim-service-sku-recategory"
     }
   ],
   "quickLinks": [
