--- a/AngularApp/projects/app-service-diagnostics/src/armResourceConfig/microsoft.apimanagement/service/config.json
+++ b/AngularApp/projects/app-service-diagnostics/src/armResourceConfig/microsoft.apimanagement/service/config.json
@@ -29,7 +29,7 @@
       ],
       "color": "rgb(208, 175, 239)",
       "createFlowForCategory": true,
-      "chatEnabled": false
+      "chatEnabled": false,
       "overviewDetectorId": "apim-availability-and-performance"
     },
     {
@@ -44,7 +44,7 @@
       ],
       "color": "rgb(249, 213, 180)",
       "createFlowForCategory": true,
-      "chatEnabled": false
+      "chatEnabled": false,
       "overviewDetectorId": "Apim-proxy-policy-errors-recategory"
     },
     {
@@ -59,7 +59,7 @@
       ],
       "color": "rgb(208, 228, 176)",
       "createFlowForCategory": true,
-      "chatEnabled": false
+      "chatEnabled": false,
       "overviewDetectorId": "apim-proxy-response-recategory"
     },
     {
@@ -74,7 +74,7 @@
       ],
       "color": "rgb(186, 211, 245)",
       "createFlowForCategory": true,
-      "chatEnabled": false
+      "chatEnabled": false,
       "overviewDetectorId": "apim-service-sku-recategory"
     }
   ],
