Updating quick links

--- a/AngularApp/projects/app-service-diagnostics/src/armResourceConfig/microsoft.apimanagement/service/config.json
+++ b/AngularApp/projects/app-service-diagnostics/src/armResourceConfig/microsoft.apimanagement/service/config.json
@@ -79,9 +79,9 @@
     }
   ],
   "quickLinks": [
-    "apim-platform-health",
-    "apim-proxy-policy-errors",
-    "apim-proxy-performance"
+    "apim-platform-health-new-category",
+    "apim-proxy-policy-errors-recategory",
+    "apim-proxy-performance-recategory"
   ],
   "pesId": "15551"
 }
