updating the category ids
category ids need to be all lowercase without space

--- a/AngularApp/projects/app-service-diagnostics/src/armResourceConfig/microsoft.apimanagement/service/config.json
+++ b/AngularApp/projects/app-service-diagnostics/src/armResourceConfig/microsoft.apimanagement/service/config.json
@@ -18,7 +18,7 @@
   },
   "categories": [
     {
-      "id": "Availability and Performance",
+      "id": "availabilityandperformanceapim",
       "name": "Availability and Performance",
       "description": "Check your API service's health and discover performance issues",
       "keywords": [
@@ -33,7 +33,7 @@
       "overviewDetectorId": "apim-availability-and-performance"
     },
     {
-      "id": "API Policies",
+      "id": "apipoliciesapim",
       "name": "API Policies",
       "description": "Find out if your API policies are misconfigured",
       "keywords": [
@@ -48,7 +48,7 @@
       "overviewDetectorId": "Apim-proxy-policy-errors-recategory"
     },
     {
-      "id": "Gateway Performance",
+      "id": "gatewayperformanceapim",
       "name": "Gateway Performance",
       "description": "Analyze your API Gateway performance and discover issues",
       "keywords": [
@@ -63,7 +63,7 @@
       "overviewDetectorId": "apim-proxy-response-recategory"
     },
     {
-      "id": "Service Upgrade",
+      "id": "serviceupgradeapim",
       "name": "Service Upgrade",
       "description": "Check your service SKU and discover your service upgrade events",
       "keywords": [
