Enable notification Id for new APIM D&S (#1087)
* Onboard notification detector to apim new D&S

* Add shownitification attribute to web app config

* show notification or not will be determined by notfication rendering count

--- a/AngularApp/projects/app-service-diagnostics/src/armResourceConfig/microsoft.apimanagement/service/config.json
+++ b/AngularApp/projects/app-service-diagnostics/src/armResourceConfig/microsoft.apimanagement/service/config.json
@@ -83,5 +83,10 @@
     "apim-proxy-policy-errors-recategory",
     "apim-proxy-performance-recategory"
   ],
-  "pesId": "15551"
+  "pesId": "15551",
+  "notificationConfig": {
+    "title": "Notifications",
+    "notificationDetectorId": "apim-notification",
+    "enableForCaseSubmissionFlow": true
+  }
 }
