--- a/AngularApp/projects/app-service-diagnostics/src/armResourceConfig/microsoft.logic/workflows/config.json
+++ b/AngularApp/projects/app-service-diagnostics/src/armResourceConfig/microsoft.logic/workflows/config.json
@@ -1,7 +1,7 @@
 {
 	"homePageText": {
 		"title": "Logic Apps Diagnostics",
-		"description": "Use Logic Apps Diagnostics to investigate how your app is performing, diagnose issues, and discover how to improve its reliability. Select the problem category that best matches the information or tool that you're interested in:",
+		"description": "Investigate how your app is performing, diagnose issues, and discover how to improve its reliability.",
 		"searchBarPlaceHolder": "Search Logic Apps Diagnostics"
 	},
 	"matchRegEx": "/Microsoft.Logic/workflows/",
@@ -17,22 +17,24 @@
 		"supportTopicIds": []
 	},
 	"categories": [{
-			"id": "Diagnostics",
+			"id": "Diagnosticsla",
 			"name": "Diagnostics",
-			"description": "Is your logic app experiencing problems or slowness? To get an overview about the most recent runs and their steps, troubleshoot, and identify possible improvements, select this category.",
+			"description": "Get an overview about the most recent runs and their steps, troubleshoot, and identify possible improvements.",
 			"keywords": ["Overview", "Runs", "Performance", "Triggers"],
 			"color": "rgb(186, 211, 245)",
 			"createFlowForCategory": true,
-			"chatEnabled": false
+			"chatEnabled": false,
+            "overviewDetectorId": "la_pubgeneral"
 		},
 		{
-			"id": "Connector Actions Health",
+			"id": "connectoractionshealthla",
 			"name": "Connector Actions Health",
-			"description": "Are you seeing any action failures in your logic app? Review connector actions health to get the details on connector errors, timeouts, or any other unexpected behavior.",
+			"description": "Review connector actions health to get the details on connector errors, timeouts, or any other unexpected behavior.",
 			"keywords": ["Actions", "Timeouts", "Connector", "4xx Errors", "5xx Errors", "SQL, Storage, and more"],
 			"color": "rgb(249, 213, 180)",
 			"createFlowForCategory": true,
-			"chatEnabled": false
+			"chatEnabled": false,
+            "overviewDetectorId": "la_waconnectorhealth"
 		}
 	],
 	"pesId": "15791"
