--- a/AngularApp/package.json
+++ b/AngularApp/package.json
@@ -60,11 +60,11 @@
     "moment": "^2.22.1",
     "ng-in-viewport": "^6.1.0",
     "ng-pick-datetime": "^6.0.16",
-    "ng-pick-datetime-moment": "1.0.7",
+    "ng-pick-datetime-moment": "1.0.8",
     "ng2-nvd3": "^2.0.0",
     "ng5-slider": "^1.1.13",
     "ngx-avatar": "^3.3.5",
-    "ngx-markdown": "6.0.0 - 6.2.0",
+    "ngx-markdown": "~11.1.3",
     "ngx-monaco-editor": "^6.0.0",
     "ngx-smart-modal": "^6.0.4",
     "node-sass": "^4.12.0",
