--- a/AngularApp/package.json
+++ b/AngularApp/package.json
@@ -25,24 +25,23 @@
     "bundle-report": "webpack-bundle-analyzer ../Backend/wwwroot/stats.json -p 8889"
   },
   "dependencies": {
-    "@angular-react/core": "1.0.1",
-    "@angular-react/fabric": "1.2.1",
-    "@angular/animations": "^8.2.14",
+    "@angular-react/core": "3.0.0",
+    "@angular-react/fabric": "3.0.0",
+    "@angular/animations": "^9.1.13",
     "@angular/cdk": "^7.3.7",
-    "@angular/common": "8.2.14",
-    "@angular/compiler": "8.2.14",
-    "@angular/core": "8.2.14",
-    "@angular/forms": "8.2.14",
+    "@angular/common": "9.1.13",
+    "@angular/compiler": "9.1.13",
+    "@angular/core": "9.1.13",
+    "@angular/forms": "9.1.13",
     "@angular/http": "7.2.15",
     "@angular/material": "^7.3.7",
-    "@angular/platform-browser": "8.2.14",
-    "@angular/platform-browser-dynamic": "8.2.14",
-    "@angular/router": "8.2.14",
-    "@angular/upgrade": "8.2.14",
+    "@angular/platform-browser": "9.1.13",
+    "@angular/platform-browser-dynamic": "9.1.13",
+    "@angular/router": "9.1.13",
+    "@angular/upgrade": "9.1.13",
     "@microsoft/applicationinsights-web": "^2.5.4",
     "@ng-select/ng-select": "^2.16.0",
-    "@swimlane/ngx-datatable": "^15.0.2",
-    "@types/react": "~16.7.13",
+    "@types/react": "~16.8.19",
     "@types/react-dom": "^16.0.11",
     "adal-angular4": "^3.0.16",
     "admin-lte": "^2.4.3",
@@ -69,31 +68,31 @@
     "ngx-smart-modal": "^6.0.4",
     "node-sass": "^4.12.0",
     "office-ui-fabric-core": "11.0.0",
-    "office-ui-fabric-react": "6.201.1",
+    "office-ui-fabric-react": "7.82.2",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "reflect-metadata": "^0.1.3",
     "rxjs": "6.6.7",
     "rxjs-compat": "6.2.2",
-    "tsickle": "^0.37.0",
+    "tslib": "^1.10.0",
     "ua-parser-js": "^0.7.19",
     "vis": "^4.21.0",
-    "web-animations-js": "^2.3.1",
-    "zone.js": "~0.9.1"
+    "web-animations-js": "^2.3.2",
+    "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.803.29",
-    "@angular-devkit/build-ng-packagr": "~0.803.29",
+    "@angular-devkit/build-angular": "~0.901.15",
+    "@angular-devkit/build-ng-packagr": "~0.901.15",
     "@angular-devkit/build-optimizer": "~0.800.3",
-    "@angular/cli": "8.3.29",
-    "@angular/compiler-cli": "8.2.14",
-    "@angular/language-service": "^8.2.14",
+    "@angular/cli": "9.1.15",
+    "@angular/compiler-cli": "9.1.13",
+    "@angular/language-service": "^9.1.13",
     "@types/jasmine": "~2.8.3",
     "@types/jasminewd2": "~2.0.2",
-    "@types/node": "~6.0.60",
+    "@types/node": "^12.11.1",
     "@types/ua-parser-js": "^0.7.32",
     "awesome-typescript-loader": "^2.2.1",
-    "codelyzer": "^4.0.1",
+    "codelyzer": "^5.1.2",
     "concurrently": "^4.1.0",
     "jasmine": "^3.0.0",
     "jasmine-core": "^3.0.0",
@@ -103,14 +102,13 @@
     "karma-coverage-istanbul-reporter": "^1.2.1",
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "ng-packagr": "^5.7.1",
+    "ng-packagr": "^9.0.0",
     "protractor": "5.3.2",
     "rxjs-tslint": "^0.1.3",
     "selfsigned": "^1.10.2",
     "ts-node": "~4.1.0",
-    "tslib": "^1.14.1",
     "tslint": "~5.9.1",
-    "typescript": "~3.5.3",
+    "typescript": "~3.8.3",
     "webpack-bundle-analyzer": "^3.6.0"
   }
 }
