Add fluentui v8 package since deep import is not suggested

--- a/AngularApp/package.json
+++ b/AngularApp/package.json
@@ -66,6 +66,7 @@
     "node-sass": "^4.12.0",
     "office-ui-fabric-core": "11.0.0",
     "office-ui-fabric-react": "7.82.2",
+    "@fluentui/react": "^8.0.0",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "reflect-metadata": "^0.1.3",
