Match Categroy id to read the same as the category that is assigned to the detector.

--- a/AngularApp/projects/app-service-diagnostics/src/armResourceConfig/microsoft.batch/batchaccounts/config.json
+++ b/AngularApp/projects/app-service-diagnostics/src/armResourceConfig/microsoft.batch/batchaccounts/config.json
@@ -19,7 +19,7 @@
     },
     "categories": [
         {
-            "id": "poolsAndNodes",
+            "id": "Pools and Nodes",
             "name": "Pools and Nodes",
             "description": "Investigate potential issues with your pools and nodes.",
             "keywords": [
