AppLens Case Surveys

--- a/ApplensBackend/appsettings.json
+++ b/ApplensBackend/appsettings.json
@@ -73,6 +73,10 @@
     "IncidentAssistEndpoint": "",
     "ApiKey": ""
   },
+  "Surveys": {
+    "IsEnabled": false,
+    "StorageConnectionString": ""
+  },
   "SelfHelpContent": {
     "UserName": "",
     "RepoName": "",
