AppLens Case Surveys (#1200)
* AppLens Case Surveys

* Add case title to logging

Co-authored-by: Ajay Sharma <ajsharm@microsoft.com>

--- a/ApplensBackend/appsettings.json
+++ b/ApplensBackend/appsettings.json
@@ -79,6 +79,10 @@
     "IncidentAssistEndpoint": "",
     "ApiKey": ""
   },
+  "Surveys": {
+    "IsEnabled": false,
+    "StorageConnectionString": ""
+  },
   "SelfHelpContent": {
     "UserName": "",
     "RepoName": "",
