Use cert auth (#1270)
* Use cert auth

--- a/ApplensBackend/appsettings.json
+++ b/ApplensBackend/appsettings.json
@@ -26,7 +26,8 @@
     "ClientId": "",
     "AppKey": "",
     "AADAuthority": "",
-    "AADResource": ""
+    "AADResource": "",
+    "CertSubjectName": ""
   },
   "Observer": {
     "endpoint": "https://wawsobserver-prod.azurewebsites.net/api/",
